syntaxique.output
Terminals unused in grammar

   mc_equival
   err


Grammar

    0 $accept: s $end

    1 s: FCTS PRGM_PRIN

    2 PRGM_PRIN: mc_prgrm idf DECS INSTS mc_end

    3 FCTS: VIDE
    4     | ENSFCT

    5 VIDE: /* empty */

    6 ENSFCT: ENSFCT FCT
    7       | FCT

    8 FCT: TYPE mc_rtin idf po ENSIDF pf DECS ENSINST assignment mc_endr
    9    | TYPE mc_rtin idf po ENSIDF pf DECS assignment mc_endr

   10 TYPE: mc_int
   11     | mc_real
   12     | mc_char
   13     | mc_logi

   14 DECS: VIDE
   15     | ENSDEC

   16 ENSDEC: ENSDEC DEC
   17       | DEC

   18 DEC: TYPE ENSIDF pvg
   19    | TYPE idf mul inti pvg
   20    | TYPE idf mc_dim po TAILLE pf pvg

   21 TAILLE: TAILLE verg inti
   22       | inti

   23 EXPRE: EXPRE add TERM
   24      | EXPRE sub TERM
   25      | TERM

   26 TERM: TERM mul FACTOR
   27     | TERM divi FACTOR
   28     | FACTOR

   29 FACTOR: po EXPRE pf
   30       | OPERAND

   31 OPERAND: idf
   32        | inti
   33        | real
   34        | idf po TAILLE pf
   35        | mc_call idf po ENSpara pf

   36 ENSpara: ENSpara verg valeur
   37        | valeur

   38 LOGI: mc_true
   39     | mc_false

   40 ENSIDF: ENSIDF verg idf
   41       | idf

   42 INSTS: VIDE
   43      | ENSINST

   44 ENSINST: ENSINST INST
   45        | INST

   46 INST: if_statement
   47     | read_statement
   48     | write_statement
   49     | dowhile_statement
   50     | assignment

   51 if_statement: mc_if po CONDI pf mc_then ENSINST else_clause mc_endif

   52 else_clause: mc_else ENSINST
   53            | /* empty */

   54 assignment: OGassi aff valeur pvg

   55 OGassi: idf
   56       | idf po TAILLE pf

   57 valeur: LOGI
   58       | str
   59       | EXPRE

   60 read_statement: mc_read po idf pf pvg

   61 write_statement: mc_write po ENS_PARA_WRITE pf pvg

   62 ENS_PARA_WRITE: ENS_PARA_WRITE verg str
   63               | ENS_PARA_WRITE verg idf
   64               | str
   65               | idf

   66 dowhile_statement: mc_dowhile po CONDI pf ENSINST mc_enddo

   67 CONDI: CONDI mc_or CONDIT
   68      | CONDI mc_and CONDIT
   69      | CONDIT

   70 CONDIT: po CONDI pf
   71       | EXPLOGI

   72 EXPLOGI: EXPRE lt EXPRE
   73        | EXPRE gt EXPRE
   74        | EXPRE ge EXPRE
   75        | EXPRE eq EXPRE
   76        | EXPRE ne EXPRE
   77        | EXPRE le EXPRE


Terminals, with rules where they appear

$end (0) 0
error (256)
idf (258) 2 8 9 19 20 31 34 35 40 41 55 56 60 63 65
aff (259) 54
mc_prgrm (260) 2
mc_rtin (261) 8 9
inti (262) 19 21 22 32
real (263) 33
mc_endr (264) 8 9
mc_call (265) 35
mc_dim (266) 20
mc_logi (267) 13
mc_char (268) 12
mc_true (269) 38
mc_false (270) 39
mc_read (271) 60
mc_write (272) 61
pvg (273) 18 19 20 54 60 61
str (274) 58 62 64
mc_int (275) 10
mc_real (276) 11
mc_end (277) 2
mc_if (278) 51
mc_then (279) 51
mc_else (280) 52
mc_dowhile (281) 66
mc_enddo (282) 66
mc_equival (283)
mc_or (284) 67
ge (285) 74
eq (286) 75
ne (287) 76
le (288) 77
add (289) 23
sub (290) 24
mul (291) 19 26
divi (292) 27
mc_and (293) 68
mc_endif (294) 51
lt (295) 72
gt (296) 73
po (297) 8 9 20 29 34 35 51 56 60 61 66 70
pf (298) 8 9 20 29 34 35 51 56 60 61 66 70
verg (299) 21 36 40 62 63
err (300)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
s (47)
    on left: 1, on right: 0
PRGM_PRIN (48)
    on left: 2, on right: 1
FCTS (49)
    on left: 3 4, on right: 1
VIDE (50)
    on left: 5, on right: 3 14 42
ENSFCT (51)
    on left: 6 7, on right: 4 6
FCT (52)
    on left: 8 9, on right: 6 7
TYPE (53)
    on left: 10 11 12 13, on right: 8 9 18 19 20
DECS (54)
    on left: 14 15, on right: 2 8 9
ENSDEC (55)
    on left: 16 17, on right: 15 16
DEC (56)
    on left: 18 19 20, on right: 16 17
TAILLE (57)
    on left: 21 22, on right: 20 21 34 56
EXPRE (58)
    on left: 23 24 25, on right: 23 24 29 59 72 73 74 75 76 77
TERM (59)
    on left: 26 27 28, on right: 23 24 25 26 27
FACTOR (60)
    on left: 29 30, on right: 26 27 28
OPERAND (61)
    on left: 31 32 33 34 35, on right: 30
ENSpara (62)
    on left: 36 37, on right: 35 36
LOGI (63)
    on left: 38 39, on right: 57
ENSIDF (64)
    on left: 40 41, on right: 8 9 18 40
INSTS (65)
    on left: 42 43, on right: 2
ENSINST (66)
    on left: 44 45, on right: 8 43 44 51 52 66
INST (67)
    on left: 46 47 48 49 50, on right: 44 45
if_statement (68)
    on left: 51, on right: 46
else_clause (69)
    on left: 52 53, on right: 51
assignment (70)
    on left: 54, on right: 8 9 50
OGassi (71)
    on left: 55 56, on right: 54
valeur (72)
    on left: 57 58 59, on right: 36 37 54
read_statement (73)
    on left: 60, on right: 47
write_statement (74)
    on left: 61, on right: 48
ENS_PARA_WRITE (75)
    on left: 62 63 64 65, on right: 61 62 63
dowhile_statement (76)
    on left: 66, on right: 49
CONDI (77)
    on left: 67 68 69, on right: 51 66 67 68 70
CONDIT (78)
    on left: 70 71, on right: 67 68 69
EXPLOGI (79)
    on left: 72 73 74 75 76 77, on right: 71


state 0

    0 $accept: . s $end

    mc_logi  shift, and go to state 1
    mc_char  shift, and go to state 2
    mc_int   shift, and go to state 3
    mc_real  shift, and go to state 4

    $default  reduce using rule 5 (VIDE)

    s       go to state 5
    FCTS    go to state 6
    VIDE    go to state 7
    ENSFCT  go to state 8
    FCT     go to state 9
    TYPE    go to state 10


state 1

   13 TYPE: mc_logi .

    $default  reduce using rule 13 (TYPE)


state 2

   12 TYPE: mc_char .

    $default  reduce using rule 12 (TYPE)


state 3

   10 TYPE: mc_int .

    $default  reduce using rule 10 (TYPE)


state 4

   11 TYPE: mc_real .

    $default  reduce using rule 11 (TYPE)


state 5

    0 $accept: s . $end

    $end  shift, and go to state 11


state 6

    1 s: FCTS . PRGM_PRIN

    mc_prgrm  shift, and go to state 12

    PRGM_PRIN  go to state 13


state 7

    3 FCTS: VIDE .

    $default  reduce using rule 3 (FCTS)


state 8

    4 FCTS: ENSFCT .
    6 ENSFCT: ENSFCT . FCT

    mc_logi  shift, and go to state 1
    mc_char  shift, and go to state 2
    mc_int   shift, and go to state 3
    mc_real  shift, and go to state 4

    $default  reduce using rule 4 (FCTS)

    FCT   go to state 14
    TYPE  go to state 10


state 9

    7 ENSFCT: FCT .

    $default  reduce using rule 7 (ENSFCT)


state 10

    8 FCT: TYPE . mc_rtin idf po ENSIDF pf DECS ENSINST assignment mc_endr
    9    | TYPE . mc_rtin idf po ENSIDF pf DECS assignment mc_endr

    mc_rtin  shift, and go to state 15


state 11

    0 $accept: s $end .

    $default  accept


state 12

    2 PRGM_PRIN: mc_prgrm . idf DECS INSTS mc_end

    idf  shift, and go to state 16


state 13

    1 s: FCTS PRGM_PRIN .

    $default  reduce using rule 1 (s)


state 14

    6 ENSFCT: ENSFCT FCT .

    $default  reduce using rule 6 (ENSFCT)


state 15

    8 FCT: TYPE mc_rtin . idf po ENSIDF pf DECS ENSINST assignment mc_endr
    9    | TYPE mc_rtin . idf po ENSIDF pf DECS assignment mc_endr

    idf  shift, and go to state 17


state 16

    2 PRGM_PRIN: mc_prgrm idf . DECS INSTS mc_end

    mc_logi  shift, and go to state 1
    mc_char  shift, and go to state 2
    mc_int   shift, and go to state 3
    mc_real  shift, and go to state 4

    $default  reduce using rule 5 (VIDE)

    VIDE    go to state 18
    TYPE    go to state 19
    DECS    go to state 20
    ENSDEC  go to state 21
    DEC     go to state 22


state 17

    8 FCT: TYPE mc_rtin idf . po ENSIDF pf DECS ENSINST assignment mc_endr
    9    | TYPE mc_rtin idf . po ENSIDF pf DECS assignment mc_endr

    po  shift, and go to state 23


state 18

   14 DECS: VIDE .

    $default  reduce using rule 14 (DECS)


state 19

   18 DEC: TYPE . ENSIDF pvg
   19    | TYPE . idf mul inti pvg
   20    | TYPE . idf mc_dim po TAILLE pf pvg

    idf  shift, and go to state 24

    ENSIDF  go to state 25


state 20

    2 PRGM_PRIN: mc_prgrm idf DECS . INSTS mc_end

    idf         shift, and go to state 26
    mc_read     shift, and go to state 27
    mc_write    shift, and go to state 28
    mc_if       shift, and go to state 29
    mc_dowhile  shift, and go to state 30

    $default  reduce using rule 5 (VIDE)

    VIDE               go to state 31
    INSTS              go to state 32
    ENSINST            go to state 33
    INST               go to state 34
    if_statement       go to state 35
    assignment         go to state 36
    OGassi             go to state 37
    read_statement     go to state 38
    write_statement    go to state 39
    dowhile_statement  go to state 40


state 21

   15 DECS: ENSDEC .
   16 ENSDEC: ENSDEC . DEC

    mc_logi  shift, and go to state 1
    mc_char  shift, and go to state 2
    mc_int   shift, and go to state 3
    mc_real  shift, and go to state 4

    $default  reduce using rule 15 (DECS)

    TYPE  go to state 19
    DEC   go to state 41


state 22

   17 ENSDEC: DEC .

    $default  reduce using rule 17 (ENSDEC)


state 23

    8 FCT: TYPE mc_rtin idf po . ENSIDF pf DECS ENSINST assignment mc_endr
    9    | TYPE mc_rtin idf po . ENSIDF pf DECS assignment mc_endr

    idf  shift, and go to state 42

    ENSIDF  go to state 43


state 24

   19 DEC: TYPE idf . mul inti pvg
   20    | TYPE idf . mc_dim po TAILLE pf pvg
   41 ENSIDF: idf .

    mc_dim  shift, and go to state 44
    mul     shift, and go to state 45

    $default  reduce using rule 41 (ENSIDF)


state 25

   18 DEC: TYPE ENSIDF . pvg
   40 ENSIDF: ENSIDF . verg idf

    pvg   shift, and go to state 46
    verg  shift, and go to state 47


state 26

   55 OGassi: idf .
   56       | idf . po TAILLE pf

    po  shift, and go to state 48

    $default  reduce using rule 55 (OGassi)


state 27

   60 read_statement: mc_read . po idf pf pvg

    po  shift, and go to state 49


state 28

   61 write_statement: mc_write . po ENS_PARA_WRITE pf pvg

    po  shift, and go to state 50


state 29

   51 if_statement: mc_if . po CONDI pf mc_then ENSINST else_clause mc_endif

    po  shift, and go to state 51


state 30

   66 dowhile_statement: mc_dowhile . po CONDI pf ENSINST mc_enddo

    po  shift, and go to state 52


state 31

   42 INSTS: VIDE .

    $default  reduce using rule 42 (INSTS)


state 32

    2 PRGM_PRIN: mc_prgrm idf DECS INSTS . mc_end

    mc_end  shift, and go to state 53


state 33

   43 INSTS: ENSINST .
   44 ENSINST: ENSINST . INST

    idf         shift, and go to state 26
    mc_read     shift, and go to state 27
    mc_write    shift, and go to state 28
    mc_if       shift, and go to state 29
    mc_dowhile  shift, and go to state 30

    $default  reduce using rule 43 (INSTS)

    INST               go to state 54
    if_statement       go to state 35
    assignment         go to state 36
    OGassi             go to state 37
    read_statement     go to state 38
    write_statement    go to state 39
    dowhile_statement  go to state 40


state 34

   45 ENSINST: INST .

    $default  reduce using rule 45 (ENSINST)


state 35

   46 INST: if_statement .

    $default  reduce using rule 46 (INST)


state 36

   50 INST: assignment .

    $default  reduce using rule 50 (INST)


state 37

   54 assignment: OGassi . aff valeur pvg

    aff  shift, and go to state 55


state 38

   47 INST: read_statement .

    $default  reduce using rule 47 (INST)


state 39

   48 INST: write_statement .

    $default  reduce using rule 48 (INST)


state 40

   49 INST: dowhile_statement .

    $default  reduce using rule 49 (INST)


state 41

   16 ENSDEC: ENSDEC DEC .

    $default  reduce using rule 16 (ENSDEC)


state 42

   41 ENSIDF: idf .

    $default  reduce using rule 41 (ENSIDF)


state 43

    8 FCT: TYPE mc_rtin idf po ENSIDF . pf DECS ENSINST assignment mc_endr
    9    | TYPE mc_rtin idf po ENSIDF . pf DECS assignment mc_endr
   40 ENSIDF: ENSIDF . verg idf

    pf    shift, and go to state 56
    verg  shift, and go to state 47


state 44

   20 DEC: TYPE idf mc_dim . po TAILLE pf pvg

    po  shift, and go to state 57


state 45

   19 DEC: TYPE idf mul . inti pvg

    inti  shift, and go to state 58


state 46

   18 DEC: TYPE ENSIDF pvg .

    $default  reduce using rule 18 (DEC)


state 47

   40 ENSIDF: ENSIDF verg . idf

    idf  shift, and go to state 59


state 48

   56 OGassi: idf po . TAILLE pf

    inti  shift, and go to state 60

    TAILLE  go to state 61


state 49

   60 read_statement: mc_read po . idf pf pvg

    idf  shift, and go to state 62


state 50

   61 write_statement: mc_write po . ENS_PARA_WRITE pf pvg

    idf  shift, and go to state 63
    str  shift, and go to state 64

    ENS_PARA_WRITE  go to state 65


state 51

   51 if_statement: mc_if po . CONDI pf mc_then ENSINST else_clause mc_endif

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 70

    EXPRE    go to state 71
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74
    CONDI    go to state 75
    CONDIT   go to state 76
    EXPLOGI  go to state 77


state 52

   66 dowhile_statement: mc_dowhile po . CONDI pf ENSINST mc_enddo

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 70

    EXPRE    go to state 71
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74
    CONDI    go to state 78
    CONDIT   go to state 76
    EXPLOGI  go to state 77


state 53

    2 PRGM_PRIN: mc_prgrm idf DECS INSTS mc_end .

    $default  reduce using rule 2 (PRGM_PRIN)


state 54

   44 ENSINST: ENSINST INST .

    $default  reduce using rule 44 (ENSINST)


state 55

   54 assignment: OGassi aff . valeur pvg

    idf       shift, and go to state 66
    inti      shift, and go to state 67
    real      shift, and go to state 68
    mc_call   shift, and go to state 69
    mc_true   shift, and go to state 79
    mc_false  shift, and go to state 80
    str       shift, and go to state 81
    po        shift, and go to state 82

    EXPRE    go to state 83
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74
    LOGI     go to state 84
    valeur   go to state 85


state 56

    8 FCT: TYPE mc_rtin idf po ENSIDF pf . DECS ENSINST assignment mc_endr
    9    | TYPE mc_rtin idf po ENSIDF pf . DECS assignment mc_endr

    mc_logi  shift, and go to state 1
    mc_char  shift, and go to state 2
    mc_int   shift, and go to state 3
    mc_real  shift, and go to state 4

    $default  reduce using rule 5 (VIDE)

    VIDE    go to state 18
    TYPE    go to state 19
    DECS    go to state 86
    ENSDEC  go to state 21
    DEC     go to state 22


state 57

   20 DEC: TYPE idf mc_dim po . TAILLE pf pvg

    inti  shift, and go to state 60

    TAILLE  go to state 87


state 58

   19 DEC: TYPE idf mul inti . pvg

    pvg  shift, and go to state 88


state 59

   40 ENSIDF: ENSIDF verg idf .

    $default  reduce using rule 40 (ENSIDF)


state 60

   22 TAILLE: inti .

    $default  reduce using rule 22 (TAILLE)


state 61

   21 TAILLE: TAILLE . verg inti
   56 OGassi: idf po TAILLE . pf

    pf    shift, and go to state 89
    verg  shift, and go to state 90


state 62

   60 read_statement: mc_read po idf . pf pvg

    pf  shift, and go to state 91


state 63

   65 ENS_PARA_WRITE: idf .

    $default  reduce using rule 65 (ENS_PARA_WRITE)


state 64

   64 ENS_PARA_WRITE: str .

    $default  reduce using rule 64 (ENS_PARA_WRITE)


state 65

   61 write_statement: mc_write po ENS_PARA_WRITE . pf pvg
   62 ENS_PARA_WRITE: ENS_PARA_WRITE . verg str
   63               | ENS_PARA_WRITE . verg idf

    pf    shift, and go to state 92
    verg  shift, and go to state 93


state 66

   31 OPERAND: idf .
   34        | idf . po TAILLE pf

    po  shift, and go to state 94

    $default  reduce using rule 31 (OPERAND)


state 67

   32 OPERAND: inti .

    $default  reduce using rule 32 (OPERAND)


state 68

   33 OPERAND: real .

    $default  reduce using rule 33 (OPERAND)


state 69

   35 OPERAND: mc_call . idf po ENSpara pf

    idf  shift, and go to state 95


state 70

   29 FACTOR: po . EXPRE pf
   70 CONDIT: po . CONDI pf

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 70

    EXPRE    go to state 96
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74
    CONDI    go to state 97
    CONDIT   go to state 76
    EXPLOGI  go to state 77


state 71

   23 EXPRE: EXPRE . add TERM
   24      | EXPRE . sub TERM
   72 EXPLOGI: EXPRE . lt EXPRE
   73        | EXPRE . gt EXPRE
   74        | EXPRE . ge EXPRE
   75        | EXPRE . eq EXPRE
   76        | EXPRE . ne EXPRE
   77        | EXPRE . le EXPRE

    ge   shift, and go to state 98
    eq   shift, and go to state 99
    ne   shift, and go to state 100
    le   shift, and go to state 101
    add  shift, and go to state 102
    sub  shift, and go to state 103
    lt   shift, and go to state 104
    gt   shift, and go to state 105


state 72

   25 EXPRE: TERM .
   26 TERM: TERM . mul FACTOR
   27     | TERM . divi FACTOR

    mul   shift, and go to state 106
    divi  shift, and go to state 107

    $default  reduce using rule 25 (EXPRE)


state 73

   28 TERM: FACTOR .

    $default  reduce using rule 28 (TERM)


state 74

   30 FACTOR: OPERAND .

    $default  reduce using rule 30 (FACTOR)


state 75

   51 if_statement: mc_if po CONDI . pf mc_then ENSINST else_clause mc_endif
   67 CONDI: CONDI . mc_or CONDIT
   68      | CONDI . mc_and CONDIT

    mc_or   shift, and go to state 108
    mc_and  shift, and go to state 109
    pf      shift, and go to state 110


state 76

   69 CONDI: CONDIT .

    $default  reduce using rule 69 (CONDI)


state 77

   71 CONDIT: EXPLOGI .

    $default  reduce using rule 71 (CONDIT)


state 78

   66 dowhile_statement: mc_dowhile po CONDI . pf ENSINST mc_enddo
   67 CONDI: CONDI . mc_or CONDIT
   68      | CONDI . mc_and CONDIT

    mc_or   shift, and go to state 108
    mc_and  shift, and go to state 109
    pf      shift, and go to state 111


state 79

   38 LOGI: mc_true .

    $default  reduce using rule 38 (LOGI)


state 80

   39 LOGI: mc_false .

    $default  reduce using rule 39 (LOGI)


state 81

   58 valeur: str .

    $default  reduce using rule 58 (valeur)


state 82

   29 FACTOR: po . EXPRE pf

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 82

    EXPRE    go to state 112
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74


state 83

   23 EXPRE: EXPRE . add TERM
   24      | EXPRE . sub TERM
   59 valeur: EXPRE .

    add  shift, and go to state 102
    sub  shift, and go to state 103

    $default  reduce using rule 59 (valeur)


state 84

   57 valeur: LOGI .

    $default  reduce using rule 57 (valeur)


state 85

   54 assignment: OGassi aff valeur . pvg

    pvg  shift, and go to state 113


state 86

    8 FCT: TYPE mc_rtin idf po ENSIDF pf DECS . ENSINST assignment mc_endr
    9    | TYPE mc_rtin idf po ENSIDF pf DECS . assignment mc_endr

    idf         shift, and go to state 26
    mc_read     shift, and go to state 27
    mc_write    shift, and go to state 28
    mc_if       shift, and go to state 29
    mc_dowhile  shift, and go to state 30

    ENSINST            go to state 114
    INST               go to state 34
    if_statement       go to state 35
    assignment         go to state 115
    OGassi             go to state 37
    read_statement     go to state 38
    write_statement    go to state 39
    dowhile_statement  go to state 40


state 87

   20 DEC: TYPE idf mc_dim po TAILLE . pf pvg
   21 TAILLE: TAILLE . verg inti

    pf    shift, and go to state 116
    verg  shift, and go to state 90


state 88

   19 DEC: TYPE idf mul inti pvg .

    $default  reduce using rule 19 (DEC)


state 89

   56 OGassi: idf po TAILLE pf .

    $default  reduce using rule 56 (OGassi)


state 90

   21 TAILLE: TAILLE verg . inti

    inti  shift, and go to state 117


state 91

   60 read_statement: mc_read po idf pf . pvg

    pvg  shift, and go to state 118


state 92

   61 write_statement: mc_write po ENS_PARA_WRITE pf . pvg

    pvg  shift, and go to state 119


state 93

   62 ENS_PARA_WRITE: ENS_PARA_WRITE verg . str
   63               | ENS_PARA_WRITE verg . idf

    idf  shift, and go to state 120
    str  shift, and go to state 121


state 94

   34 OPERAND: idf po . TAILLE pf

    inti  shift, and go to state 60

    TAILLE  go to state 122


state 95

   35 OPERAND: mc_call idf . po ENSpara pf

    po  shift, and go to state 123


state 96

   23 EXPRE: EXPRE . add TERM
   24      | EXPRE . sub TERM
   29 FACTOR: po EXPRE . pf
   72 EXPLOGI: EXPRE . lt EXPRE
   73        | EXPRE . gt EXPRE
   74        | EXPRE . ge EXPRE
   75        | EXPRE . eq EXPRE
   76        | EXPRE . ne EXPRE
   77        | EXPRE . le EXPRE

    ge   shift, and go to state 98
    eq   shift, and go to state 99
    ne   shift, and go to state 100
    le   shift, and go to state 101
    add  shift, and go to state 102
    sub  shift, and go to state 103
    lt   shift, and go to state 104
    gt   shift, and go to state 105
    pf   shift, and go to state 124


state 97

   67 CONDI: CONDI . mc_or CONDIT
   68      | CONDI . mc_and CONDIT
   70 CONDIT: po CONDI . pf

    mc_or   shift, and go to state 108
    mc_and  shift, and go to state 109
    pf      shift, and go to state 125


state 98

   74 EXPLOGI: EXPRE ge . EXPRE

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 82

    EXPRE    go to state 126
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74


state 99

   75 EXPLOGI: EXPRE eq . EXPRE

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 82

    EXPRE    go to state 127
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74


state 100

   76 EXPLOGI: EXPRE ne . EXPRE

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 82

    EXPRE    go to state 128
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74


state 101

   77 EXPLOGI: EXPRE le . EXPRE

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 82

    EXPRE    go to state 129
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74


state 102

   23 EXPRE: EXPRE add . TERM

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 82

    TERM     go to state 130
    FACTOR   go to state 73
    OPERAND  go to state 74


state 103

   24 EXPRE: EXPRE sub . TERM

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 82

    TERM     go to state 131
    FACTOR   go to state 73
    OPERAND  go to state 74


state 104

   72 EXPLOGI: EXPRE lt . EXPRE

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 82

    EXPRE    go to state 132
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74


state 105

   73 EXPLOGI: EXPRE gt . EXPRE

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 82

    EXPRE    go to state 133
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74


state 106

   26 TERM: TERM mul . FACTOR

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 82

    FACTOR   go to state 134
    OPERAND  go to state 74


state 107

   27 TERM: TERM divi . FACTOR

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 82

    FACTOR   go to state 135
    OPERAND  go to state 74


state 108

   67 CONDI: CONDI mc_or . CONDIT

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 70

    EXPRE    go to state 71
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74
    CONDIT   go to state 136
    EXPLOGI  go to state 77


state 109

   68 CONDI: CONDI mc_and . CONDIT

    idf      shift, and go to state 66
    inti     shift, and go to state 67
    real     shift, and go to state 68
    mc_call  shift, and go to state 69
    po       shift, and go to state 70

    EXPRE    go to state 71
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74
    CONDIT   go to state 137
    EXPLOGI  go to state 77


state 110

   51 if_statement: mc_if po CONDI pf . mc_then ENSINST else_clause mc_endif

    mc_then  shift, and go to state 138


state 111

   66 dowhile_statement: mc_dowhile po CONDI pf . ENSINST mc_enddo

    idf         shift, and go to state 26
    mc_read     shift, and go to state 27
    mc_write    shift, and go to state 28
    mc_if       shift, and go to state 29
    mc_dowhile  shift, and go to state 30

    ENSINST            go to state 139
    INST               go to state 34
    if_statement       go to state 35
    assignment         go to state 36
    OGassi             go to state 37
    read_statement     go to state 38
    write_statement    go to state 39
    dowhile_statement  go to state 40


state 112

   23 EXPRE: EXPRE . add TERM
   24      | EXPRE . sub TERM
   29 FACTOR: po EXPRE . pf

    add  shift, and go to state 102
    sub  shift, and go to state 103
    pf   shift, and go to state 124


state 113

   54 assignment: OGassi aff valeur pvg .

    $default  reduce using rule 54 (assignment)


state 114

    8 FCT: TYPE mc_rtin idf po ENSIDF pf DECS ENSINST . assignment mc_endr
   44 ENSINST: ENSINST . INST

    idf         shift, and go to state 26
    mc_read     shift, and go to state 27
    mc_write    shift, and go to state 28
    mc_if       shift, and go to state 29
    mc_dowhile  shift, and go to state 30

    INST               go to state 54
    if_statement       go to state 35
    assignment         go to state 140
    OGassi             go to state 37
    read_statement     go to state 38
    write_statement    go to state 39
    dowhile_statement  go to state 40


state 115

    9 FCT: TYPE mc_rtin idf po ENSIDF pf DECS assignment . mc_endr
   50 INST: assignment .

    mc_endr  shift, and go to state 141

    $default  reduce using rule 50 (INST)


state 116

   20 DEC: TYPE idf mc_dim po TAILLE pf . pvg

    pvg  shift, and go to state 142


state 117

   21 TAILLE: TAILLE verg inti .

    $default  reduce using rule 21 (TAILLE)


state 118

   60 read_statement: mc_read po idf pf pvg .

    $default  reduce using rule 60 (read_statement)


state 119

   61 write_statement: mc_write po ENS_PARA_WRITE pf pvg .

    $default  reduce using rule 61 (write_statement)


state 120

   63 ENS_PARA_WRITE: ENS_PARA_WRITE verg idf .

    $default  reduce using rule 63 (ENS_PARA_WRITE)


state 121

   62 ENS_PARA_WRITE: ENS_PARA_WRITE verg str .

    $default  reduce using rule 62 (ENS_PARA_WRITE)


state 122

   21 TAILLE: TAILLE . verg inti
   34 OPERAND: idf po TAILLE . pf

    pf    shift, and go to state 143
    verg  shift, and go to state 90


state 123

   35 OPERAND: mc_call idf po . ENSpara pf

    idf       shift, and go to state 66
    inti      shift, and go to state 67
    real      shift, and go to state 68
    mc_call   shift, and go to state 69
    mc_true   shift, and go to state 79
    mc_false  shift, and go to state 80
    str       shift, and go to state 81
    po        shift, and go to state 82

    EXPRE    go to state 83
    TERM     go to state 72
    FACTOR   go to state 73
    OPERAND  go to state 74
    ENSpara  go to state 144
    LOGI     go to state 84
    valeur   go to state 145


state 124

   29 FACTOR: po EXPRE pf .

    $default  reduce using rule 29 (FACTOR)


state 125

   70 CONDIT: po CONDI pf .

    $default  reduce using rule 70 (CONDIT)


state 126

   23 EXPRE: EXPRE . add TERM
   24      | EXPRE . sub TERM
   74 EXPLOGI: EXPRE ge EXPRE .

    add  shift, and go to state 102
    sub  shift, and go to state 103

    $default  reduce using rule 74 (EXPLOGI)


state 127

   23 EXPRE: EXPRE . add TERM
   24      | EXPRE . sub TERM
   75 EXPLOGI: EXPRE eq EXPRE .

    add  shift, and go to state 102
    sub  shift, and go to state 103

    $default  reduce using rule 75 (EXPLOGI)


state 128

   23 EXPRE: EXPRE . add TERM
   24      | EXPRE . sub TERM
   76 EXPLOGI: EXPRE ne EXPRE .

    add  shift, and go to state 102
    sub  shift, and go to state 103

    $default  reduce using rule 76 (EXPLOGI)


state 129

   23 EXPRE: EXPRE . add TERM
   24      | EXPRE . sub TERM
   77 EXPLOGI: EXPRE le EXPRE .

    add  shift, and go to state 102
    sub  shift, and go to state 103

    $default  reduce using rule 77 (EXPLOGI)


state 130

   23 EXPRE: EXPRE add TERM .
   26 TERM: TERM . mul FACTOR
   27     | TERM . divi FACTOR

    mul   shift, and go to state 106
    divi  shift, and go to state 107

    $default  reduce using rule 23 (EXPRE)


state 131

   24 EXPRE: EXPRE sub TERM .
   26 TERM: TERM . mul FACTOR
   27     | TERM . divi FACTOR

    mul   shift, and go to state 106
    divi  shift, and go to state 107

    $default  reduce using rule 24 (EXPRE)


state 132

   23 EXPRE: EXPRE . add TERM
   24      | EXPRE . sub TERM
   72 EXPLOGI: EXPRE lt EXPRE .

    add  shift, and go to state 102
    sub  shift, and go to state 103

    $default  reduce using rule 72 (EXPLOGI)


state 133

   23 EXPRE: EXPRE . add TERM
   24      | EXPRE . sub TERM
   73 EXPLOGI: EXPRE gt EXPRE .

    add  shift, and go to state 102
    sub  shift, and go to state 103

    $default  reduce using rule 73 (EXPLOGI)


state 134

   26 TERM: TERM mul FACTOR .

    $default  reduce using rule 26 (TERM)


state 135

   27 TERM: TERM divi FACTOR .

    $default  reduce using rule 27 (TERM)


state 136

   67 CONDI: CONDI mc_or CONDIT .

    $default  reduce using rule 67 (CONDI)


state 137

   68 CONDI: CONDI mc_and CONDIT .

    $default  reduce using rule 68 (CONDI)


state 138

   51 if_statement: mc_if po CONDI pf mc_then . ENSINST else_clause mc_endif
